0.5.5	UNRELEASED

  BUG FIXES

   * Mark as compatible with Bazaar 2.1.

  FEATURES

   * Add hidden 'pseudonyms' command for finding revision pseudonyms.

   * Add 'rebase-foreign' command for rebasing branches of imports.

0.5.4	2009-09-24

  CHANGES

   * The 'svn-upgrade' command is no longer provided. Instead, please 
     use the 'foreign-mapping-upgrade' command.

  BUG FIXES

   * Mark as compatible with Bazaar 1.18 and 2.0.

0.5.3	2009-07-18

  BUG FIXES

  * Fix for brown paper bag issue in the 0.5.2 release. (#401174)

0.5.2	2009-07-14

  * Mark as compatible with Bazaar 1.17.

0.5.1	2009-06-18

 BUG FIXES

  * Mark as compatible with Bazaar 1.16.

0.5.0	2009-05-20

 BUG FIXES

  * Remove use of deprecated Revision.get_apparent_author().

 FEATURES

  * Import "bzr foreign-mapping-upgrade" command from bzr-foreign.

0.4.4	2009-03-10

 BUG FIXES

  * Mark as compatible with bzr 1.13.

  Change license back to GPL2-+

0.4.3	2009-02-15

 BUG FIXES

  * Cope with ghosts in svn-upgrade. (#323140, #325402)

 PERFORMANCE

  * Register commands lazily, should reduce import time when unused.
  

0.4.2	2008-11-18

 FEATURES

  * Will automatically pull if it's not possible to rebase. 
    (#240204)

  * Use parent location as default rather than push location.

  * Hide "replay" command.

0.4.1	2008-09-01

 BUG FIXES

  * Loosen check of text parents a bit (required for bzr-svn).

 CHANGES

  * Support DESTDIR in Makefile.

0.4		2008-08-02

 CHANGES

  * Changed license from GPLv2 or later to GPLv3 or later.

 BUG FIXES

  * Fix compatibility with Bazaar 1.6. 

  * Fixed overactive assertion. (#242245)

  * Fixed O(history) access during plan creation. (Robert Collins, #249823)

 ENHANCEMENTS

  * Set author property to preserve committer and original author of the 
    commit.  (Lukáš Lalinský)

  * Add new option --pending-merges for rebasing pending merges after 
    "bzr up". (#162622)

0.3		2007-12-06

 ENHANCEMENTS
