@@ -237,6 +237,48 @@ class TestRebaseSimple(ExternalBase):
         self.run_bzr('commit -m merge')
         self.run_bzr('rebase')
 
+    def test_always_rebase_merges(self):
+        trunk = self.make_branch_and_tree('trunk')
+        trunk.commit('base')
+        feature2 = trunk.bzrdir.sprout('feature2').open_workingtree()
+        revid2 = feature2.commit('change')
+        feature = trunk.bzrdir.sprout('feature').open_workingtree()
+        feature.commit('change')
+        feature.merge_from_branch(feature2.branch)
+        feature.commit('merge')
+        feature.commit('change2')
+        trunk.commit('additional upstream change')
+        self.run_bzr('rebase --always-rebase-merges ../trunk', working_dir='feature')
+        # second revision back should be a merge of feature2
+        repo = feature.branch.repository
+        repo.lock_read()
+        self.addCleanup(repo.unlock)
+        tip = feature.last_revision()
+        merge_id = repo.get_graph().get_parent_map([tip])[tip][0]
+        merge_parents = repo.get_graph().get_parent_map([merge_id])[merge_id]
+        self.assertEqual(revid2, merge_parents[1])
+    
+    def test_rebase_merge(self):
+        trunk = self.make_branch_and_tree('trunk')
+        trunk.commit('base')
+        feature2 = trunk.bzrdir.sprout('feature2').open_workingtree()
+        revid2 = feature2.commit('change')
+        feature = trunk.bzrdir.sprout('feature').open_workingtree()
+        feature.commit('change')
+        feature.merge_from_branch(feature2.branch)
+        feature.commit('merge')
+        feature.commit('change2')
+        trunk.commit('additional upstream change')
+        self.run_bzr('rebase ../trunk', working_dir='feature')
+        # second revision back should be a merge of feature2
+        repo = feature.branch.repository
+        repo.lock_read()
+        self.addCleanup(repo.unlock)
+        tip = feature.last_revision()
+        merge_id = repo.get_graph().get_parent_map([tip])[tip][0]
+        merge_parents = repo.get_graph().get_parent_map([merge_id])[merge_id]
+        self.assertEqual(revid2, merge_parents[1])
+
 class ReplayTests(ExternalBase):
     def test_replay(self):
         os.mkdir('main')
